--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,8 +2,8 @@ name: CI/CD
 
 on:
   push:
-    branches:
-      - main
+    # branches:
+    #   - main
 
 jobs:
   build:
@@ -18,6 +18,9 @@ jobs:
 
     - name: Build and push backend image
       run: docker build -t benjames9/handemonium-backend:latest ./backend && docker push benjames9/handemonium-backend:latest
+
+    - name: Build and push backend image
+      run: docker build -t benjames9/handemonium-frontend:latest ./frontend/handemonium && docker push benjames9/handemonium-frontend:latest
 
   # deploy:
   #   needs: build
