adds --experimental-https flag

--- a/frontend/handemonium/package.json
+++ b/frontend/handemonium/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --experimental-https",
     "build": "next build",
-    "start": "HTTPS=true SSL_CRT_FILE=./146.169.40.85.pem SSL_KEY_FILE=146.169.40.85-key.pem next start",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
