--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,5 +3,7 @@ pydantic>=1.8.0,<2.0.0
 uvicorn>=0.15.0,<0.16.0
 face-recognition==1.3.0
 face_recognition_models==0.3.0
+mediapipe==0.10.0
+pandas==2.1.4
 pillow>=10.1
 python-multipart
