integrate static face detection

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,17 @@
 # python base image
-FROM python:3.9
+FROM python:3.11.0
 
 # Workdir for output
 WORKDIR /app
+
+# Install dependencies required for OpenCV and GLib
+RUN apt-get update && apt-get install -y \
+    libgl1-mesa-glx \
+    libglib2.0-0 \
+    ffmpeg \
+    libsm6 \
+    libxext6 \
+    && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements.txt to workdir
 COPY requirements.txt .
