--- a/frontend/handemonium/package.json
+++ b/frontend/handemonium/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "next": "14.1.0",
+    "@fortawesome/react-fontawesome": "0.2.0",
+    "@fortawesome/free-solid-svg-icons": "6.5.1",
+    "@fortawesome/fontawesome-svg-core": "6.5.1",
+    "react-circular-progressbar": "2.1.0"
   },
   "devDependencies": {
     "typescript": "^5",
